[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/BarlowCondensed-BlackItalic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/ui/UiTextButtonLabel.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/ui/YesNoMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=16]
size = 40
outline_size = 4
outline_color = Color( 0.501961, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="YesNoMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.6 )

[node name="LabelBG" type="ColorRect" parent="."]
margin_top = 300.0
margin_right = 1280.0
margin_bottom = 420.0
color = Color( 0, 0, 0, 0.690196 )

[node name="InformLabel" type="Label" parent="."]
margin_left = 328.0
margin_right = 960.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 16 )
text = "SAVED FILE FOUND! dO YOU WANT TO OPEN THE LOAD MENU?"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="YesButton" type="TextureButton" parent="."]
margin_left = 512.0
margin_top = 448.0
margin_right = 600.0
margin_bottom = 481.0

[node name="Label" type="Label" parent="YesButton"]
margin_right = 80.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
text = "YES"
align = 1
valign = 1
uppercase = true

[node name="NoButton" type="TextureButton" parent="."]
margin_left = 712.0
margin_top = 448.0
margin_right = 784.0
margin_bottom = 481.0

[node name="Label" type="Label" parent="NoButton"]
margin_right = 72.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
text = "NO"
align = 1
valign = 1
uppercase = true

[connection signal="pressed" from="YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="NoButton" to="." method="_on_NoButton_pressed"]
